--- a/Euler#31/Euler#31/Euler#31.csproj
+++ b/Euler#31/Euler#31/Euler#31.csproj
@@ -8,6 +8,8 @@
     <RootNamespace>Euler31</RootNamespace>
     <AssemblyName>Euler#31</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <ProductVersion>8.0.30703</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
